--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "tsc",
     "dev": "bun run src/index.ts",
     "format": "prettier --write .",
+    "inspector": "bun run build ; bun x @modelcontextprotocol/inspector node build/index.js",
     "typecheck": "tsc --noEmit"
   },
   "peerDependencies": {
@@ -23,6 +24,5 @@
     "@types/bun": "latest",
     "@types/node": "^22.13.10",
     "prettier": "^3.5.3"
-  },
-  "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
+  }
 }
